secondary fix for horizontal scroll bar

--- a/src/App.css
+++ b/src/App.css
@@ -91,9 +91,10 @@
   }
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1400px) {
   .App {
     border-left: 1px solid var(--body-color);
     border-right: 1px solid var(--body-color);
+    overflow-y: hidden;
   }
 }
